// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchItem should render future match correctly 1`] = `
<a
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root Component-matchItem-9 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
  href="/match/test"
  id="test"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="MuiListItemText-root Component-text-12 Component-home-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemAvatar-root"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circular Component-homeIcon-7 Component-logo-8"
      >
        <img
          className="MuiAvatar-img"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-11 Component-default-3"
  >
    <div
      className="Component-dash-2"
    >
      :
    </div>
  </div>
  <div
    className="MuiListItemText-root Component-text-12 Component-guest-5"
  >
    <div
      className="MuiListItemAvatar-root"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circular Component-awayIcon-1 Component-logo-8"
      >
        <img
          className="MuiAvatar-img"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root"
  />
</a>
`;

exports[`MatchItem should render played match correctly 1`] = `
<a
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root Component-matchItem-9 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
  href="/match/test"
  id="test"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="MuiListItemText-root Component-text-12 Component-home-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemAvatar-root"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circular Component-homeIcon-7 Component-logo-8"
      >
        <img
          className="MuiAvatar-img"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-11 Component-green-4"
  >
    <div>
      2
    </div>
    <div
      className="Component-dash-2"
    >
      :
    </div>
    <div>
      1
    </div>
  </div>
  <div
    className="MuiListItemText-root Component-text-12 Component-guest-5"
  >
    <div
      className="MuiListItemAvatar-root"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circular Component-awayIcon-1 Component-logo-8"
      >
        <img
          className="MuiAvatar-img"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
</a>
`;

exports[`MatchItem should render predicted wrong match correctly 1`] = `
<a
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root Component-matchItem-9 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
  href="/match/test"
  id="test"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="MuiListItemText-root Component-text-12 Component-home-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemAvatar-root"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circular Component-homeIcon-7 Component-logo-8"
      >
        <img
          className="MuiAvatar-img"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-11 Component-red-10"
  >
    <div>
      2
    </div>
    <div
      className="Component-dash-2"
    >
      :
    </div>
    <div>
      1
    </div>
  </div>
  <div
    className="MuiListItemText-root Component-text-12 Component-guest-5"
  >
    <div
      className="MuiListItemAvatar-root"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circular Component-awayIcon-1 Component-logo-8"
      >
        <img
          className="MuiAvatar-img"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
</a>
`;
